[NOID] Clean up some usages of the deprecated id() and reduce warnings